Fixed overlapping footer and centered texfileds.

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ h1 {
 
 h2 {
     font-size: 2em;
-    color: blue;
+    color: white;
 }
 
 h3 {
@@ -39,7 +39,7 @@ a:hover {
 
 #shop {
     margin-left: 13%;
-    margin-top: -30%;
+    margin-top: 5%;
     display: flex;
     justify-content: space-between;
     width: 75%;
@@ -70,12 +70,14 @@ a:hover {
 }
 
 .submit {
+    display: block;
     width: 20%;
     padding: 0.75rem;
     background: royalblue;
     color: white;
     border-radius: 2px;
     cursor: pointer;
+    margin: auto;
 }
 
 .email {
@@ -86,6 +88,7 @@ a:hover {
     background-color: #fff;
     border: 1px solid #ced1da;
     border-radius: 0.25rem;
+    margin: auto;
 }
 
 .text {
@@ -96,4 +99,5 @@ a:hover {
     background-color: #fff;
     border: 1px solid #ced1da;
     border-radius: 0.25rem;
+    margin: auto;
 }
